adds notification & clean up worker
